<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="pl.store.activities.EditProductActivity">

    <TextView
        android:id="@+id/productID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal" />

    <Spinner
        android:id="@+id/categoryEditSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:entries="@array/add_field_category"
        android:gravity="center" />

    <EditText
        android:id="@+id/etProductEditName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="2"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/add_field_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etProductEditPrice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/add_field_price_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etProductEditDesc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="4"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/add_field_desc_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnEdiProduct"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:background="@color/colorAccent"
        android:onClick="btnSubmit"
        android:text="@string/add_field_submit" />

</LinearLayout>
